@@ -5,8 +5,8 @@
 from tests.support import unittest2, inPy3k
 
 from mock import (
-    call, _Call, create_autospec,
-    MagicMock, Mock, ANY, _CallList
+    call, _Call, create_autospec, MagicMock,
+    Mock, ANY, _CallList, mock_open, patch
 )
 
 from datetime import datetime
@@ -851,6 +851,50 @@ class TestCallList(unittest2.TestCase):
         )
         self.assertEqual(str(mock.mock_calls), expected)
 
+
+
+class TestMockOpen(unittest2.TestCase):
+
+    def test_mock_open(self):
+        mock = mock_open()
+        with patch('%s.open' % __name__, mock, create=True) as patched:
+            self.assertIs(patched, mock)
+            open('foo')
+
+        mock.assert_called_once_with('foo')
+
+
+    def test_mock_open_context_manager(self):
+        mock = mock_open()
+        handle = mock.return_value
+        with patch('%s.open' % __name__, mock, create=True):
+            with open('foo') as f:
+                f.read()
+
+        expected_calls = [call('foo'), call().__enter__(), call().read(),
+                          call().__exit__(None, None, None)]
+        self.assertEqual(mock.mock_calls, expected_calls)
+        self.assertIs(f, handle)
+
+
+    def test_explicit_mock(self):
+        mock = MagicMock()
+        mock_open(mock)
+
+        with patch('%s.open' % __name__, mock, create=True) as patched:
+            self.assertIs(patched, mock)
+            open('foo')
+
+        mock.assert_called_once_with('foo')
+
+
+    def test_read_data(self):
+        mock = mock_open(read_data='foo')
+        with patch('%s.open' % __name__, mock, create=True):
+            h = open('bar')
+            result = h.read()
+
+        self.assertEqual(result, 'foo')
 
 if __name__ == '__main__':
     unittest2.main()
